batch states with huge numbers tweeters

--- a/tweeters-2013-09-15/0-states.html
+++ b/tweeters-2013-09-15/0-states.html
@@ -1,53 +1,98 @@
 <html><body>
 <h2>50 States</h2>
-<div><a href='CA.html'>CA (596)</a></div>
-<div><a href='TX.html'>TX (325)</a></div>
-<div><a href='FL.html'>FL (265)</a></div>
-<div><a href='OR.html'>OR (154)</a></div>
-<div><a href='NY.html'>NY (144)</a></div>
-<div><a href='DC.html'>DC (140)</a></div>
-<div><a href='WA.html'>WA (111)</a></div>
-<div><a href='CO.html'>CO (91)</a></div>
-<div><a href='IL.html'>IL (90)</a></div>
-<div><a href='NC.html'>NC (89)</a></div>
-<div><a href='OH.html'>OH (85)</a></div>
-<div><a href='PA.html'>PA (73)</a></div>
-<div><a href='MN.html'>MN (65)</a></div>
-<div><a href='AZ.html'>AZ (64)</a></div>
-<div><a href='IN.html'>IN (62)</a></div>
-<div><a href='HI.html'>HI (61)</a></div>
-<div><a href='MA.html'>MA (60)</a></div>
-<div><a href='TN.html'>TN (60)</a></div>
-<div><a href='MD.html'>MD (57)</a></div>
-<div><a href='VA.html'>VA (57)</a></div>
-<div><a href='GA.html'>GA (54)</a></div>
-<div><a href='NV.html'>NV (49)</a></div>
-<div><a href='RI.html'>RI (45)</a></div>
-<div><a href='MO.html'>MO (43)</a></div>
-<div><a href='CT.html'>CT (33)</a></div>
-<div><a href='NJ.html'>NJ (29)</a></div>
-<div><a href='LA.html'>LA (28)</a></div>
-<div><a href='MI.html'>MI (25)</a></div>
-<div><a href='WI.html'>WI (25)</a></div>
-<div><a href='OK.html'>OK (24)</a></div>
-<div><a href='SC.html'>SC (23)</a></div>
-<div><a href='UT.html'>UT (17)</a></div>
-<div><a href='KY.html'>KY (15)</a></div>
-<div><a href='ID.html'>ID (11)</a></div>
-<div><a href='ME.html'>ME (11)</a></div>
-<div><a href='AL.html'>AL (10)</a></div>
-<div><a href='KS.html'>KS (10)</a></div>
-<div><a href='ND.html'>ND (6)</a></div>
-<div><a href='NM.html'>NM (6)</a></div>
-<div><a href='NE.html'>NE (5)</a></div>
-<div><a href='DE.html'>DE (4)</a></div>
-<div><a href='VT.html'>VT (4)</a></div>
-<div><a href='PR.html'>PR (4)</a></div>
-<div><a href='MT.html'>MT (3)</a></div>
-<div><a href='AR.html'>AR (2)</a></div>
-<div><a href='MS.html'>MS (1)</a></div>
-<div><a href='NH.html'>NH (1)</a></div>
-<div><a href='LND.html'>LND (1)</a></div>
-<div><a href='ON.html'>ON (1)</a></div>
-<div><a href='WY.html'>WY (1)</a></div>
+<div><a href='CA.html'>CA-1 (50)</a></div>
+<div><a href='CA-1.html'>CA-2 (50)</a></div>
+<div><a href='CA-2.html'>CA-3 (50)</a></div>
+<div><a href='CA-3.html'>CA-4 (50)</a></div>
+<div><a href='CA-4.html'>CA-5 (50)</a></div>
+<div><a href='CA-5.html'>CA-6 (50)</a></div>
+<div><a href='CA-6.html'>CA-7 (50)</a></div>
+<div><a href='CA-7.html'>CA-8 (50)</a></div>
+<div><a href='CA-8.html'>CA-9 (50)</a></div>
+<div><a href='CA-9.html'>CA-10 (50)</a></div>
+<div><a href='CA-10.html'>CA-11 (50)</a></div>
+<div><a href='CA-11.html'>CA-12 (46)</a></div>
+<div><a href='TX.html'>TX-1 (50)</a></div>
+<div><a href='TX-1.html'>TX-2 (50)</a></div>
+<div><a href='TX-2.html'>TX-3 (50)</a></div>
+<div><a href='TX-3.html'>TX-4 (50)</a></div>
+<div><a href='TX-4.html'>TX-5 (50)</a></div>
+<div><a href='TX-5.html'>TX-6 (50)</a></div>
+<div><a href='TX-6.html'>TX-7 (25)</a></div>
+<div><a href='FL.html'>FL-1 (50)</a></div>
+<div><a href='FL-1.html'>FL-2 (50)</a></div>
+<div><a href='FL-2.html'>FL-3 (50)</a></div>
+<div><a href='FL-3.html'>FL-4 (50)</a></div>
+<div><a href='FL-4.html'>FL-5 (50)</a></div>
+<div><a href='FL-5.html'>FL-6 (15)</a></div>
+<div><a href='OR.html'>OR-1 (50)</a></div>
+<div><a href='OR-1.html'>OR-2 (50)</a></div>
+<div><a href='OR-2.html'>OR-3 (50)</a></div>
+<div><a href='OR-3.html'>OR-4 (4)</a></div>
+<div><a href='NY.html'>NY-1 (50)</a></div>
+<div><a href='NY-1.html'>NY-2 (50)</a></div>
+<div><a href='NY-2.html'>NY-3 (44)</a></div>
+<div><a href='DC.html'>DC-1 (50)</a></div>
+<div><a href='DC-1.html'>DC-2 (50)</a></div>
+<div><a href='DC-2.html'>DC-3 (40)</a></div>
+<div><a href='WA.html'>WA-1 (50)</a></div>
+<div><a href='WA-1.html'>WA-2 (50)</a></div>
+<div><a href='WA-2.html'>WA-3 (11)</a></div>
+<div><a href='CO.html'>CO-1 (50)</a></div>
+<div><a href='CO-1.html'>CO-2 (41)</a></div>
+<div><a href='IL.html'>IL-1 (50)</a></div>
+<div><a href='IL-1.html'>IL-2 (40)</a></div>
+<div><a href='NC.html'>NC-1 (50)</a></div>
+<div><a href='NC-1.html'>NC-2 (39)</a></div>
+<div><a href='OH.html'>OH-1 (50)</a></div>
+<div><a href='OH-1.html'>OH-2 (35)</a></div>
+<div><a href='PA.html'>PA-1 (50)</a></div>
+<div><a href='PA-1.html'>PA-2 (23)</a></div>
+<div><a href='MN.html'>MN-1 (50)</a></div>
+<div><a href='MN-1.html'>MN-2 (15)</a></div>
+<div><a href='AZ.html'>AZ-1 (50)</a></div>
+<div><a href='AZ-1.html'>AZ-2 (14)</a></div>
+<div><a href='IN.html'>IN-1 (50)</a></div>
+<div><a href='IN-1.html'>IN-2 (12)</a></div>
+<div><a href='HI.html'>HI-1 (50)</a></div>
+<div><a href='HI-1.html'>HI-2 (11)</a></div>
+<div><a href='MA.html'>MA-1 (50)</a></div>
+<div><a href='MA-1.html'>MA-2 (10)</a></div>
+<div><a href='TN.html'>TN-1 (50)</a></div>
+<div><a href='TN-1.html'>TN-2 (10)</a></div>
+<div><a href='MD.html'>MD-1 (50)</a></div>
+<div><a href='MD-1.html'>MD-2 (7)</a></div>
+<div><a href='VA.html'>VA-1 (50)</a></div>
+<div><a href='VA-1.html'>VA-2 (7)</a></div>
+<div><a href='GA.html'>GA-1 (50)</a></div>
+<div><a href='GA-1.html'>GA-2 (4)</a></div>
+<div><a href='NV.html'>NV-1 (49)</a></div>
+<div><a href='RI.html'>RI-1 (45)</a></div>
+<div><a href='MO.html'>MO-1 (43)</a></div>
+<div><a href='CT.html'>CT-1 (33)</a></div>
+<div><a href='NJ.html'>NJ-1 (29)</a></div>
+<div><a href='LA.html'>LA-1 (28)</a></div>
+<div><a href='MI.html'>MI-1 (25)</a></div>
+<div><a href='WI.html'>WI-1 (25)</a></div>
+<div><a href='OK.html'>OK-1 (24)</a></div>
+<div><a href='SC.html'>SC-1 (23)</a></div>
+<div><a href='UT.html'>UT-1 (17)</a></div>
+<div><a href='KY.html'>KY-1 (15)</a></div>
+<div><a href='ID.html'>ID-1 (11)</a></div>
+<div><a href='ME.html'>ME-1 (11)</a></div>
+<div><a href='AL.html'>AL-1 (10)</a></div>
+<div><a href='KS.html'>KS-1 (10)</a></div>
+<div><a href='ND.html'>ND-1 (6)</a></div>
+<div><a href='NM.html'>NM-1 (6)</a></div>
+<div><a href='NE.html'>NE-1 (5)</a></div>
+<div><a href='DE.html'>DE-1 (4)</a></div>
+<div><a href='VT.html'>VT-1 (4)</a></div>
+<div><a href='PR.html'>PR-1 (4)</a></div>
+<div><a href='MT.html'>MT-1 (3)</a></div>
+<div><a href='AR.html'>AR-1 (2)</a></div>
+<div><a href='MS.html'>MS-1 (1)</a></div>
+<div><a href='NH.html'>NH-1 (1)</a></div>
+<div><a href='LND.html'>LND-1 (1)</a></div>
+<div><a href='ON.html'>ON-1 (1)</a></div>
+<div><a href='WY.html'>WY-1 (1)</a></div>
 </body></html>
