--- a/tweeters-2013-09-15/CT.html
+++ b/tweeters-2013-09-15/CT.html
@@ -2,183 +2,183 @@
 <h1>CT</h1>
 <h2>Derby, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Derby] 
+  1.1. [CT] [Derby] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=dadsfoodtruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/dadsfoodtruck' target='t'>dadsfoodtruck</A>
 </div>
 <h2>Durham, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Durham] 
+  1.2. [CT] [Durham] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=GMonkeyMobile&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/GMonkeyMobile' target='t'>GMonkeyMobile</A>
 </div>
 <h2>East haven, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [East Haven] 
+  1.3. [CT] [East Haven] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TheSugarBakery&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TheSugarBakery' target='t'>TheSugarBakery</A>
 </div>
 <h2>Fairfield, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Fairfield] 
+  1.4. [CT] [Fairfield] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SuperDuperWeene&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/SuperDuperWeene' target='t'>SuperDuperWeene</A>
 </div>
 <h2>Greenwich, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Greenwich] 
+  1.5. [CT] [Greenwich] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=hibachiheaven&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/hibachiheaven' target='t'>hibachiheaven</A>
 </div>
 <h2>Hartford, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Hartford] 
+  1.6. [CT] [Hartford] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LUCKY_TACO&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/LUCKY_TACO' target='t'>LUCKY_TACO</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Hartford] 
+  1.7. [CT] [Hartford] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Souprsamich&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/Souprsamich' target='t'>Souprsamich</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Hartford] 
+  1.8. [CT] [Hartford] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TheCupcakeBrake&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TheCupcakeBrake' target='t'>TheCupcakeBrake</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Hartford] 
+  1.9. [CT] [Hartford] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=getittoasted&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/getittoasted' target='t'>getittoasted</A>
 </div>
 <h2>Meriden, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Meriden] 
+  1.10. [CT] [Meriden] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Cruisin_Cafe&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/Cruisin_Cafe' target='t'>Cruisin_Cafe</A>
 </div>
 <h2>Middletown, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Middletown] 
+  1.11. [CT] [Middletown] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=roughhousefood&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/roughhousefood' target='t'>roughhousefood</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Middletown] 
+  1.12. [CT] [Middletown] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=wheystation&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/wheystation' target='t'>wheystation</A>
 </div>
 <h2>Milford, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Milford] 
+  1.13. [CT] [Milford] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LobsterHut1&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/LobsterHut1' target='t'>LobsterHut1</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Milford] 
+  1.14. [CT] [Milford] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=gotcheftruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/gotcheftruck' target='t'>gotcheftruck</A>
 </div>
 <h2>New canaan, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [New Canaan] 
+  1.15. [CT] [New Canaan] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=JoesPizzaNC&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/JoesPizzaNC' target='t'>JoesPizzaNC</A>
 </div>
 <h2>New haven, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [New Haven] 
+  1.16. [CT] [New Haven] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=MsGsTastys&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/MsGsTastys' target='t'>MsGsTastys</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [New Haven] 
+  1.17. [CT] [New Haven] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=FourFlours&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/FourFlours' target='t'>FourFlours</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [New Haven] 
+  1.18. [CT] [New Haven] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SnowieCT&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/SnowieCT' target='t'>SnowieCT</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [New Haven] 
+  1.19. [CT] [New Haven] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=caseusgrilled&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/caseusgrilled' target='t'>caseusgrilled</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [New Haven] 
+  1.20. [CT] [New Haven] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=GoGreekLLC&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/GoGreekLLC' target='t'>GoGreekLLC</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [New Haven] 
+  1.21. [CT] [New Haven] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=FryborgTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/FryborgTruck' target='t'>FryborgTruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [New Haven] 
+  1.22. [CT] [New Haven] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=firedogct&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/firedogct' target='t'>firedogct</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [New Haven] 
+  1.23. [CT] [New Haven] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=cupcaketruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/cupcaketruck' target='t'>cupcaketruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [New Haven] 
+  1.24. [CT] [New Haven] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BlueGoatCrepes&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/BlueGoatCrepes' target='t'>BlueGoatCrepes</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [New Haven] 
-  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TwstdCroissant &show_count=true&show_screen_name=true'></iframe>
+  1.25. [CT] [New Haven] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TwstdCroissant&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TwstdCroissant ' target='t'>TwstdCroissant </A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [New Haven] 
+  1.26. [CT] [New Haven] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=szabosseafood&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/szabosseafood' target='t'>szabosseafood</A>
 </div>
 <h2>Norwalk, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Norwalk] 
+  1.27. [CT] [Norwalk] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LobsterCraft&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/LobsterCraft' target='t'>LobsterCraft</A>
 </div>
 <h2>Shelton, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Shelton] 
+  1.28. [CT] [Shelton] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=szabosseafood&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/szabosseafood' target='t'>szabosseafood</A>
 </div>
 <h2>Stamford, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Stamford] 
+  1.29. [CT] [Stamford] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Melt_Mobile&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/Melt_Mobile' target='t'>Melt_Mobile</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Stamford] 
+  1.30. [CT] [Stamford] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ELCHARRITO&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ELCHARRITO' target='t'>ELCHARRITO</A>
 </div>
 <h2>Waterford, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Waterford] 
+  1.31. [CT] [Waterford] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=munchiesft&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/munchiesft' target='t'>munchiesft</A>
 </div>
 <h2>Westbrook, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Westbrook] 
+  1.32. [CT] [Westbrook] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=foodextrovert&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/foodextrovert' target='t'>foodextrovert</A>
 </div>
 <h2>Woodbury, CT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [CT] [Woodbury] 
+  1.33. [CT] [Woodbury] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ElCamionCT&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ElCamionCT' target='t'>ElCamionCT</A>
 </div>
