--- a/tweeters-2013-09-15/DE.html
+++ b/tweeters-2013-09-15/DE.html
@@ -2,24 +2,24 @@
 <h1>DE</h1>
 <h2>Neward, DE</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [DE] [Neward] 
+  1.1. [DE] [Neward] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=thecartatud&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/thecartatud' target='t'>thecartatud</A>
 </div>
 <h2>Newark, DE</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [DE] [Newark] 
+  1.2. [DE] [Newark] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=idontgiveaFORK&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/idontgiveaFORK' target='t'>idontgiveaFORK</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [DE] [Newark] 
+  1.3. [DE] [Newark] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=WoodFiredPizzaT&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/WoodFiredPizzaT' target='t'>WoodFiredPizzaT</A>
 </div>
 <h2>Wilmington, DE</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [DE] [Wilmington] 
+  1.4. [DE] [Wilmington] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=java_pup&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/java_pup' target='t'>java_pup</A>
 </div>
