--- a/tweeters-2013-09-15/KS.html
+++ b/tweeters-2013-09-15/KS.html
@@ -2,56 +2,56 @@
 <h1>KS</h1>
 <h2>Kansas city, KS</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KS] [Kansas City] 
+  1.1. [KS] [Kansas City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=thefunnelcaketruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/thefunnelcaketruck' target='t'>thefunnelcaketruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KS] [Kansas City] 
+  1.2. [KS] [Kansas City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=INDIOSCRBNSTOS&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/INDIOSCRBNSTOS' target='t'>INDIOSCRBNSTOS</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KS] [Kansas City] 
+  1.3. [KS] [Kansas City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=MooseTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/MooseTruck' target='t'>MooseTruck</A>
 </div>
 <h2>Leawood, KS</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KS] [Leawood] 
+  1.4. [KS] [Leawood] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=baldeespizza&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/baldeespizza' target='t'>baldeespizza</A>
 </div>
 <h2>Shawnee, KS</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KS] [Shawnee] 
+  1.5. [KS] [Shawnee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CraveOfKCTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/CraveOfKCTruck' target='t'>CraveOfKCTruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KS] [Shawnee] 
+  1.6. [KS] [Shawnee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=smokinfreshbbq&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/smokinfreshbbq' target='t'>smokinfreshbbq</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KS] [Shawnee] 
+  1.7. [KS] [Shawnee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=pfoven&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/pfoven' target='t'>pfoven</A>
 </div>
 <h2>Stilwell, KS</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KS] [Stilwell] 
+  1.8. [KS] [Stilwell] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=beautyofbistro&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/beautyofbistro' target='t'>beautyofbistro</A>
 </div>
 <h2>Wichita, KS</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KS] [Wichita] 
+  1.9. [KS] [Wichita] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=letmeatbrats&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/letmeatbrats' target='t'>letmeatbrats</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KS] [Wichita] 
+  1.10. [KS] [Wichita] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=theflyingstove&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/theflyingstove' target='t'>theflyingstove</A>
 </div>
