--- a/tweeters-2013-09-15/KY.html
+++ b/tweeters-2013-09-15/KY.html
@@ -2,78 +2,78 @@
 <h1>KY</h1>
 <h2>Lexington, KY</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KY] [Lexington] 
+  1.1. [KY] [Lexington] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=tntbbqandgrill&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/tntbbqandgrill' target='t'>tntbbqandgrill</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KY] [Lexington] 
+  1.2. [KY] [Lexington] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=jrendersbbq&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/jrendersbbq' target='t'>jrendersbbq</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KY] [Lexington] 
+  1.3. [KY] [Lexington] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=cullenscarts&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/cullenscarts' target='t'>cullenscarts</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KY] [Lexington] 
+  1.4. [KY] [Lexington] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CluckinBurger&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/CluckinBurger' target='t'>CluckinBurger</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KY] [Lexington] 
+  1.5. [KY] [Lexington] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ThatsHowWeRoll2&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ThatsHowWeRoll2' target='t'>ThatsHowWeRoll2</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KY] [Lexington] 
+  1.6. [KY] [Lexington] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=bradfordbbq&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/bradfordbbq' target='t'>bradfordbbq</A>
 </div>
 <h2>Louisville, KY</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KY] [Louisville] 
+  1.7. [KY] [Louisville] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BOOTYS2&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/BOOTYS2' target='t'>BOOTYS2</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KY] [Louisville] 
+  1.8. [KY] [Louisville] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=IndoCanadatruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/IndoCanadatruck' target='t'>IndoCanadatruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KY] [Louisville] 
+  1.9. [KY] [Louisville] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=johnnysdinercar&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/johnnysdinercar' target='t'>johnnysdinercar</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KY] [Louisville] 
+  1.10. [KY] [Louisville] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=MozzaPi&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/MozzaPi' target='t'>MozzaPi</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KY] [Louisville] 
+  1.11. [KY] [Louisville] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=HolyMoleTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/HolyMoleTruck' target='t'>HolyMoleTruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KY] [Louisville] 
+  1.12. [KY] [Louisville] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BullyDogs&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/BullyDogs' target='t'>BullyDogs</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KY] [Louisville] 
+  1.13. [KY] [Louisville] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LilCheezers&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/LilCheezers' target='t'>LilCheezers</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KY] [Louisville] 
+  1.14. [KY] [Louisville] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BustaGrill502&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/BustaGrill502' target='t'>BustaGrill502</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [KY] [Louisville] 
+  1.15. [KY] [Louisville] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LouisvilleGrind&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/LouisvilleGrind' target='t'>LouisvilleGrind</A>
 </div>
