--- a/tweeters-2013-09-15/LA.html
+++ b/tweeters-2013-09-15/LA.html
@@ -2,147 +2,147 @@
 <h1>LA</h1>
 <h2>Baton rouge, LA</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [Baton Rouge] 
+  1.1. [LA] [Baton Rouge] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=DeLiciousFleur&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/DeLiciousFleur' target='t'>DeLiciousFleur</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [Baton Rouge] 
+  1.2. [LA] [Baton Rouge] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=chickenshackexp&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/chickenshackexp' target='t'>chickenshackexp</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [Baton Rouge] 
+  1.3. [LA] [Baton Rouge] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=pullinporkbr&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/pullinporkbr' target='t'>pullinporkbr</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [Baton Rouge] 
+  1.4. [LA] [Baton Rouge] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CubanConnectBR&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/CubanConnectBR' target='t'>CubanConnectBR</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [Baton Rouge] 
+  1.5. [LA] [Baton Rouge] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TacodePaco&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TacodePaco' target='t'>TacodePaco</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [Baton Rouge] 
+  1.6. [LA] [Baton Rouge] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=geauxyo&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/geauxyo' target='t'>geauxyo</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [Baton Rouge] 
+  1.7. [LA] [Baton Rouge] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ThreeBonesCater&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ThreeBonesCater' target='t'>ThreeBonesCater</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [Baton Rouge] 
+  1.8. [LA] [Baton Rouge] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=brfoodtruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/brfoodtruck' target='t'>brfoodtruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [Baton Rouge] 
+  1.9. [LA] [Baton Rouge] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=curbsidetruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/curbsidetruck' target='t'>curbsidetruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [Baton Rouge] 
+  1.10. [LA] [Baton Rouge] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=dempseysbr&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/dempseysbr' target='t'>dempseysbr</A>
 </div>
 <h2>Jefferson, LA</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [Jefferson] 
+  1.11. [LA] [Jefferson] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=rue_chow&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/rue_chow' target='t'>rue_chow</A>
 </div>
 <h2>Lafayette, LA</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [Lafayette] 
+  1.12. [LA] [Lafayette] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=vivalawaffle&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/vivalawaffle' target='t'>vivalawaffle</A>
 </div>
 <h2>New orleans, LA</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [New Orleans] 
+  1.13. [LA] [New Orleans] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=frencheezetruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/frencheezetruck' target='t'>frencheezetruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [New Orleans] 
+  1.14. [LA] [New Orleans] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=fooddrunknola&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/fooddrunknola' target='t'>fooddrunknola</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [New Orleans] 
+  1.15. [LA] [New Orleans] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TLNola&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TLNola' target='t'>TLNola</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [New Orleans] 
+  1.16. [LA] [New Orleans] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=FoodieCallNOLA&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/FoodieCallNOLA' target='t'>FoodieCallNOLA</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [New Orleans] 
+  1.17. [LA] [New Orleans] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CFoodRoamALot&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/CFoodRoamALot' target='t'>CFoodRoamALot</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [New Orleans] 
+  1.18. [LA] [New Orleans] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BeignetRoule&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/BeignetRoule' target='t'>BeignetRoule</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [New Orleans] 
+  1.19. [LA] [New Orleans] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LaCocinita&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/LaCocinita' target='t'>LaCocinita</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [New Orleans] 
+  1.20. [LA] [New Orleans] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SliderShak&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/SliderShak' target='t'>SliderShak</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [New Orleans] 
+  1.21. [LA] [New Orleans] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=nolagirlfood&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/nolagirlfood' target='t'>nolagirlfood</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [New Orleans] 
+  1.22. [LA] [New Orleans] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=FatFalafel&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/FatFalafel' target='t'>FatFalafel</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [New Orleans] 
+  1.23. [LA] [New Orleans] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=EmpanadaIntifad&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/EmpanadaIntifad' target='t'>EmpanadaIntifad</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [New Orleans] 
+  1.24. [LA] [New Orleans] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BBQNSOME&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/BBQNSOME' target='t'>BBQNSOME</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [New Orleans] 
+  1.25. [LA] [New Orleans] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BrigadeCoffee&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/BrigadeCoffee' target='t'>BrigadeCoffee</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [New Orleans] 
+  1.26. [LA] [New Orleans] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=NOLAFOODSTREME&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/NOLAFOODSTREME' target='t'>NOLAFOODSTREME</A>
 </div>
 <h2>Port allen, LA</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [Port Allen] 
+  1.27. [LA] [Port Allen] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Couyons&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/Couyons' target='t'>Couyons</A>
 </div>
 <h2>Shreveport, LA</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [LA] [Shreveport] 
+  1.28. [LA] [Shreveport] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=poboyrichgirl&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/poboyrichgirl' target='t'>poboyrichgirl</A>
 </div>
