--- a/tweeters-2013-09-15/MI.html
+++ b/tweeters-2013-09-15/MI.html
@@ -2,142 +2,142 @@
 <h1>MI</h1>
 <h2>Ann arbor, MI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Ann Arbor] 
+  1.1. [MI] [Ann Arbor] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=eatonthestreet&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/eatonthestreet' target='t'>eatonthestreet</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Ann Arbor] 
+  1.2. [MI] [Ann Arbor] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=sanstreetfood&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/sanstreetfood' target='t'>sanstreetfood</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Ann Arbor] 
+  1.3. [MI] [Ann Arbor] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=EatBeetBox&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/EatBeetBox' target='t'>EatBeetBox</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Ann Arbor] 
+  1.4. [MI] [Ann Arbor] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=MarksCartsA2&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/MarksCartsA2' target='t'>MarksCartsA2</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Ann Arbor] 
+  1.5. [MI] [Ann Arbor] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=darcyscart&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/darcyscart' target='t'>darcyscart</A>
 </div>
 <h2>Birmingham, MI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Birmingham] 
+  1.6. [MI] [Birmingham] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TravelBurger&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TravelBurger' target='t'>TravelBurger</A>
 </div>
 <h2>Clinton township, MI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Clinton Township] 
+  1.7. [MI] [Clinton Township] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=dagojoes&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/dagojoes' target='t'>dagojoes</A>
 </div>
 <h2>Detroit, MI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Detroit] 
+  1.8. [MI] [Detroit] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=elGuapoGrill&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/elGuapoGrill' target='t'>elGuapoGrill</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Detroit] 
+  1.9. [MI] [Detroit] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ChowCatering&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ChowCatering' target='t'>ChowCatering</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Detroit] 
+  1.10. [MI] [Detroit] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=GreenZebraTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/GreenZebraTruck' target='t'>GreenZebraTruck</A>
 </div>
 <h2>East lansing, MI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [East Lansing] 
+  1.11. [MI] [East Lansing] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=eatpurplecarrot&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/eatpurplecarrot' target='t'>eatpurplecarrot</A>
 </div>
 <h2>Ferndale, MI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Ferndale] 
+  1.12. [MI] [Ferndale] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TreatDreams&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TreatDreams' target='t'>TreatDreams</A>
 </div>
 <h2>Grand rapids, MI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Grand Rapids] 
+  1.13. [MI] [Grand Rapids] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=sporkfoodtruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/sporkfoodtruck' target='t'>sporkfoodtruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Grand Rapids] 
+  1.14. [MI] [Grand Rapids] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=tacotruckGR&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/tacotruckGR' target='t'>tacotruckGR</A>
 </div>
 <h2>Kalamazoo, MI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Kalamazoo] 
+  1.15. [MI] [Kalamazoo] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=GorillaEATS&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/GorillaEATS' target='t'>GorillaEATS</A>
 </div>
 <h2>Lansing, MI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Lansing] 
+  1.16. [MI] [Lansing] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ElOasisTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ElOasisTruck' target='t'>ElOasisTruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Lansing] 
+  1.17. [MI] [Lansing] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TrailerParkd&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TrailerParkd' target='t'>TrailerParkd</A>
 </div>
 <h2>Livonia, MI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Livonia] 
+  1.18. [MI] [Livonia] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CONCRETECUISINE&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/CONCRETECUISINE' target='t'>CONCRETECUISINE</A>
 </div>
 <h2>Madison heights, MI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Madison Heights] 
+  1.19. [MI] [Madison Heights] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=macshackmi&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/macshackmi' target='t'>macshackmi</A>
 </div>
 <h2>Pleasant ridge, MI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Pleasant Ridge] 
+  1.20. [MI] [Pleasant Ridge] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=tacomamadetroit&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/tacomamadetroit' target='t'>tacomamadetroit</A>
 </div>
 <h2>Royal oak, MI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Royal Oak] 
+  1.21. [MI] [Royal Oak] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=JacquesTacos&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/JacquesTacos' target='t'>JacquesTacos</A>
 </div>
 <h2>St. joseph, MI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [St. Joseph] 
+  1.22. [MI] [St. Joseph] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=GoOrganicGypsy&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/GoOrganicGypsy' target='t'>GoOrganicGypsy</A>
 </div>
 <h2>Traverse, MI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Traverse] 
+  1.23. [MI] [Traverse] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=eatatginger&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/eatatginger' target='t'>eatatginger</A>
 </div>
 <h2>Traverse city, MI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Traverse City] 
+  1.24. [MI] [Traverse City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ezcheesytc&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ezcheesytc' target='t'>ezcheesytc</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MI] [Traverse City] 
+  1.25. [MI] [Traverse City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=RoamingHarvest&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/RoamingHarvest' target='t'>RoamingHarvest</A>
 </div>
