--- a/tweeters-2013-09-15/SC.html
+++ b/tweeters-2013-09-15/SC.html
@@ -2,127 +2,127 @@
 <h1>SC</h1>
 <h2>Charleston, SC</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Charleston] 
+  1.1. [SC] [Charleston] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=AutoBanhTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/AutoBanhTruck' target='t'>AutoBanhTruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Charleston] 
+  1.2. [SC] [Charleston] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CorysGC&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/CorysGC' target='t'>CorysGC</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Charleston] 
+  1.3. [SC] [Charleston] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=RotiRolls&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/RotiRolls' target='t'>RotiRolls</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Charleston] 
+  1.4. [SC] [Charleston] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=kingofpopsCHS&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/kingofpopsCHS' target='t'>kingofpopsCHS</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Charleston] 
+  1.5. [SC] [Charleston] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LSCfoodtruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/LSCfoodtruck' target='t'>LSCfoodtruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Charleston] 
+  1.6. [SC] [Charleston] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=dulcetruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/dulcetruck' target='t'>dulcetruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Charleston] 
+  1.7. [SC] [Charleston] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CastIronTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/CastIronTruck' target='t'>CastIronTruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Charleston] 
+  1.8. [SC] [Charleston] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Outtamyhuevos&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/Outtamyhuevos' target='t'>Outtamyhuevos</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Charleston] 
+  1.9. [SC] [Charleston] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=FoodieTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/https://twitter.com/FoodieTruck' target='t'>FoodieTruck</A>
 </div>
 <h2>Charlotte, SC</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Charlotte] 
+  1.10. [SC] [Charlotte] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=kingofpopsCLT&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/kingofpopsCLT' target='t'>kingofpopsCLT</A>
 </div>
 <h2>Columbia, SC</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Columbia] 
+  1.11. [SC] [Columbia] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=artisanbbqtruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/artisanbbqtruck' target='t'>artisanbbqtruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Columbia] 
+  1.12. [SC] [Columbia] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=2FAT2FLYWINGS&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/2FAT2FLYWINGS' target='t'>2FAT2FLYWINGS</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Columbia] 
+  1.13. [SC] [Columbia] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=PFP_FoodTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/PFP_FoodTruck' target='t'>PFP_FoodTruck</A>
 </div>
 <h2>Folly beach, SC</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Folly Beach] 
-  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TokyoCrepes &show_count=true&show_screen_name=true'></iframe>
+  1.14. [SC] [Folly Beach] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TokyoCrepes&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TokyoCrepes ' target='t'>TokyoCrepes </A>
 </div>
 <h2>Fort mill, SC</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Fort Mill] 
+  1.15. [SC] [Fort Mill] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ggoombahs&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ggoombahs' target='t'>ggoombahs</A>
 </div>
 <h2>Goose creek, SC</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Goose Creek] 
+  1.16. [SC] [Goose Creek] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=REFUELERSMobile&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/REFUELERSMobile' target='t'>REFUELERSMobile</A>
 </div>
 <h2>Greenville, SC</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Greenville] 
+  1.17. [SC] [Greenville] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=NeueSouthern&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/NeueSouthern' target='t'>NeueSouthern</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Greenville] 
+  1.18. [SC] [Greenville] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Chocmoosebakery&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/Chocmoosebakery' target='t'>Chocmoosebakery</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Greenville] 
+  1.19. [SC] [Greenville] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ASADAfood&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ASADAfood' target='t'>ASADAfood</A>
 </div>
 <h2>Landrum, SC</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Landrum] 
+  1.20. [SC] [Landrum] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=DarkCornerDiner&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/DarkCornerDiner' target='t'>DarkCornerDiner</A>
 </div>
 <h2>Mount pleasant, SC</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Mount Pleasant] 
+  1.21. [SC] [Mount Pleasant] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=coastalcrust&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/coastalcrust' target='t'>coastalcrust</A>
 </div>
 <h2>Mt. pleasant, SC</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Mt. Pleasant] 
+  1.22. [SC] [Mt. Pleasant] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=creolefoodtruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/creolefoodtruck' target='t'>creolefoodtruck</A>
 </div>
 <h2>Summerville, SC</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [SC] [Summerville] 
+  1.23. [SC] [Summerville] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=MoosesMobileQ&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/MoosesMobileQ' target='t'>MoosesMobileQ</A>
 </div>
