--- a/tweeters-2013-09-15/UT.html
+++ b/tweeters-2013-09-15/UT.html
@@ -2,93 +2,93 @@
 <h1>UT</h1>
 <h2>Bountiful, UT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [Bountiful] 
+  1.1. [UT] [Bountiful] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SmokestreamBBQ&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/SmokestreamBBQ' target='t'>SmokestreamBBQ</A>
 </div>
 <h2>Hurricane, UT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [Hurricane] 
+  1.2. [UT] [Hurricane] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=sonnyboysbbq&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/sonnyboysbbq' target='t'>sonnyboysbbq</A>
 </div>
 <h2>Moab, UT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [Moab] 
+  1.3. [UT] [Moab] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=quesomobilla&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/quesomobilla' target='t'>quesomobilla</A>
 </div>
 <h2>North salt lake, UT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [North Salt Lake] 
+  1.4. [UT] [North Salt Lake] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=soutiesutah&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/soutiesutah' target='t'>soutiesutah</A>
 </div>
 <h2>Provo, UT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [Provo] 
+  1.5. [UT] [Provo] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=waffluv&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/waffluv' target='t'>waffluv</A>
 </div>
 <h2>Salt lake city, UT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [Salt Lake City] 
+  1.6. [UT] [Salt Lake City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=bento_truck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/bento_truck' target='t'>bento_truck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [Salt Lake City] 
+  1.7. [UT] [Salt Lake City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=pogispizzatruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/pogispizzatruck' target='t'>pogispizzatruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [Salt Lake City] 
+  1.8. [UT] [Salt Lake City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LewisBrosFood&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/LewisBrosFood' target='t'>LewisBrosFood</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [Salt Lake City] 
+  1.9. [UT] [Salt Lake City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CruzinSushi&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/CruzinSushi' target='t'>CruzinSushi</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [Salt Lake City] 
+  1.10. [UT] [Salt Lake City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=indplace&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/indplace' target='t'>indplace</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [Salt Lake City] 
+  1.11. [UT] [Salt Lake City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=WakiPakiFood&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/WakiPakiFood' target='t'>WakiPakiFood</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [Salt Lake City] 
+  1.12. [UT] [Salt Lake City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=surefirepizza&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/surefirepizza' target='t'>surefirepizza</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [Salt Lake City] 
+  1.13. [UT] [Salt Lake City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Chowtruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/Chowtruck' target='t'>Chowtruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [Salt Lake City] 
+  1.14. [UT] [Salt Lake City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=submarinostruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/submarinostruck' target='t'>submarinostruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [Salt Lake City] 
+  1.15. [UT] [Salt Lake City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=OffTheGridSLC&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/OffTheGridSLC' target='t'>OffTheGridSLC</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [Salt Lake City] 
+  1.16. [UT] [Salt Lake City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BetterBurgerUT&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/BetterBurgerUT' target='t'>BetterBurgerUT</A>
 </div>
 <h2>Smithfield, UT</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [UT] [Smithfield] 
+  1.17. [UT] [Smithfield] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=StreetEatsUtah&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/StreetEatsUtah' target='t'>StreetEatsUtah</A>
 </div>
