--- a/tweeters-2013-09-15/WI.html
+++ b/tweeters-2013-09-15/WI.html
@@ -2,130 +2,130 @@
 <h1>WI</h1>
 <h2>Appleton, WI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Appleton] 
+  1.1. [WI] [Appleton] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=kangaroostauran&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/kangaroostauran' target='t'>kangaroostauran</A>
 </div>
 <h2>Fredonia, WI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Fredonia] 
+  1.2. [WI] [Fredonia] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=MRTONYSBBQ&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/MRTONYSBBQ' target='t'>MRTONYSBBQ</A>
 </div>
 <h2>Madison, WI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Madison] 
+  1.3. [WI] [Madison] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CaracasEmpanada&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/CaracasEmpanada' target='t'>CaracasEmpanada</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Madison] 
+  1.4. [WI] [Madison] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SlideFoodCart&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/SlideFoodCart' target='t'>SlideFoodCart</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Madison] 
+  1.5. [WI] [Madison] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=IGoVeGo&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/IGoVeGo' target='t'>IGoVeGo</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Madison] 
+  1.6. [WI] [Madison] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=bjskolaches&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/bjskolaches' target='t'>bjskolaches</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Madison] 
+  1.7. [WI] [Madison] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=friedandfab&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/friedandfab' target='t'>friedandfab</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Madison] 
+  1.8. [WI] [Madison] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=UWSoHo&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/UWSoHo' target='t'>UWSoHo</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Madison] 
+  1.9. [WI] [Madison] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BanzoMadison&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/BanzoMadison' target='t'>BanzoMadison</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Madison] 
+  1.10. [WI] [Madison] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SweetDishMSN&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/SweetDishMSN' target='t'>SweetDishMSN</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Madison] 
+  1.11. [WI] [Madison] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=RaffysMadison&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/RaffysMadison' target='t'>RaffysMadison</A>
 </div>
 <h2>Milwaukee, WI</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Milwaukee] 
+  1.12. [WI] [Milwaukee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CHUBBYCHEESETRK&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/CHUBBYCHEESETRK' target='t'>CHUBBYCHEESETRK</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Milwaukee] 
+  1.13. [WI] [Milwaukee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=americaneuros&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/americaneuros' target='t'>americaneuros</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Milwaukee] 
+  1.14. [WI] [Milwaukee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=jeppajoes&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/jeppajoes' target='t'>jeppajoes</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Milwaukee] 
+  1.15. [WI] [Milwaukee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=tigerbitetruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/tigerbitetruck' target='t'>tigerbitetruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Milwaukee] 
+  1.16. [WI] [Milwaukee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=bunmemke&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/bunmemke' target='t'>bunmemke</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Milwaukee] 
+  1.17. [WI] [Milwaukee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=streetzapizza&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/streetzapizza' target='t'>streetzapizza</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Milwaukee] 
+  1.18. [WI] [Milwaukee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=PitaBros&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/PitaBros' target='t'>PitaBros</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Milwaukee] 
+  1.19. [WI] [Milwaukee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=HauteTacoTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/HauteTacoTruck' target='t'>HauteTacoTruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Milwaukee] 
+  1.20. [WI] [Milwaukee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=satellitecrepes&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/satellitecrepes' target='t'>satellitecrepes</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Milwaukee] 
+  1.21. [WI] [Milwaukee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=RedTruckSliders&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/RedTruckSliders' target='t'>RedTruckSliders</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Milwaukee] 
+  1.22. [WI] [Milwaukee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=THEHARDWOODCAFE&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/THEHARDWOODCAFE' target='t'>THEHARDWOODCAFE</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Milwaukee] 
+  1.23. [WI] [Milwaukee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SimmerMKE&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/SimmerMKE' target='t'>SimmerMKE</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Milwaukee] 
+  1.24. [WI] [Milwaukee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=fastfoodiemke&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/fastfoodiemke' target='t'>fastfoodiemke</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WI] [Milwaukee] 
+  1.25. [WI] [Milwaukee] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=rollmke&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/rollmke' target='t'>rollmke</A>
 </div>
