--- a/tweeters-2013-09-15/AL.html
+++ b/tweeters-2013-09-15/AL.html
@@ -2,53 +2,53 @@
 <h1>AL</h1>
 <h2>Birmingham, AL</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [AL] [Birmingham] 
+  1.1. [AL] [Birmingham] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=meltbham&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/meltbham' target='t'>meltbham</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [AL] [Birmingham] 
+  1.2. [AL] [Birmingham] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=GregsHotDogs&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/GregsHotDogs' target='t'>GregsHotDogs</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [AL] [Birmingham] 
+  1.3. [AL] [Birmingham] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=RUHKT&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/RUHKT' target='t'>RUHKT</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [AL] [Birmingham] 
+  1.4. [AL] [Birmingham] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=FreshOfftheBun&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/FreshOfftheBun' target='t'>FreshOfftheBun</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [AL] [Birmingham] 
+  1.5. [AL] [Birmingham] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SpoonfedGrill&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/SpoonfedGrill' target='t'>SpoonfedGrill</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [AL] [Birmingham] 
+  1.6. [AL] [Birmingham] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=dreamcakesbham&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/dreamcakesbham' target='t'>dreamcakesbham</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [AL] [Birmingham] 
+  1.7. [AL] [Birmingham] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ShindigsTrucks&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ShindigsTrucks' target='t'>ShindigsTrucks</A>
 </div>
 <h2>Huntsville, AL</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [AL] [Huntsville] 
+  1.8. [AL] [Huntsville] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BusFood&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/BusFood' target='t'>BusFood</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [AL] [Huntsville] 
+  1.9. [AL] [Huntsville] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=sugarbelletruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/sugarbelletruck' target='t'>sugarbelletruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [AL] [Huntsville] 
+  1.10. [AL] [Huntsville] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=OnOnTacos&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/OnOnTacos' target='t'>OnOnTacos</A>
 </div>
