--- a/tweeters-2013-09-15/ID.html
+++ b/tweeters-2013-09-15/ID.html
@@ -2,60 +2,60 @@
 <h1>ID</h1>
 <h2>Bellevue, ID</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ID] [Bellevue] 
+  1.1. [ID] [Bellevue] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=calle75tacos&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/calle75tacos' target='t'>calle75tacos</A>
 </div>
 <h2>Boise, ID</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ID] [Boise] 
+  1.2. [ID] [Boise] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SLGridiron&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/SLGridiron' target='t'>SLGridiron</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ID] [Boise] 
+  1.3. [ID] [Boise] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=archies_place&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/archies_place' target='t'>archies_place</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ID] [Boise] 
+  1.4. [ID] [Boise] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=kanakkatering&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/kanakkatering' target='t'>kanakkatering</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ID] [Boise] 
+  1.5. [ID] [Boise] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BoiseFryCo&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/BoiseFryCo' target='t'>BoiseFryCo</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ID] [Boise] 
+  1.6. [ID] [Boise] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=thegemkitchen&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/thegemkitchen' target='t'>thegemkitchen</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ID] [Boise] 
+  1.7. [ID] [Boise] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=KiltedKod&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/KiltedKod' target='t'>KiltedKod</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ID] [Boise] 
+  1.8. [ID] [Boise] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=AsianBoyBBQ&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/AsianBoyBBQ' target='t'>AsianBoyBBQ</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ID] [Boise] 
+  1.9. [ID] [Boise] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=boisesoulfood&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/boisesoulfood' target='t'>boisesoulfood</A>
 </div>
 <h2>Meridian, ID</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ID] [Meridian] 
+  1.10. [ID] [Meridian] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ACupcakeParadis&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ACupcakeParadis' target='t'>ACupcakeParadis</A>
 </div>
 <h2>Nampa, ID</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ID] [Nampa] 
+  1.11. [ID] [Nampa] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=B29Streatery&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/B29Streatery' target='t'>B29Streatery</A>
 </div>
