--- a/tweeters-2013-09-15/ME.html
+++ b/tweeters-2013-09-15/ME.html
@@ -2,62 +2,62 @@
 <h1>ME</h1>
 <h2>Augusta, ME</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ME] [Augusta] 
+  1.1. [ME] [Augusta] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TheLobsterLady1&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TheLobsterLady1' target='t'>TheLobsterLady1</A>
 </div>
 <h2>Bangor, ME</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ME] [Bangor] 
+  1.2. [ME] [Bangor] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=thesqueezeme&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/thesqueezeme' target='t'>thesqueezeme</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ME] [Bangor] 
-  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=cielostruck &show_count=true&show_screen_name=true'></iframe>
+  1.3. [ME] [Bangor] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=cielostruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/cielostruck ' target='t'>cielostruck </A>
 </div>
 <h2>Cape elizabeth, ME</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ME] [Cape Elizabeth] 
+  1.4. [ME] [Cape Elizabeth] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BiteIntoMaine&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/BiteIntoMaine' target='t'>BiteIntoMaine</A>
 </div>
 <h2>Kittery, ME</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ME] [Kittery] 
+  1.5. [ME] [Kittery] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=VidaVerdeMobile&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/VidaVerdeMobile' target='t'>VidaVerdeMobile</A>
 </div>
 <h2>Portland, ME</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ME] [Portland] 
+  1.6. [ME] [Portland] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=hellagoodtacos&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/hellagoodtacos' target='t'>hellagoodtacos</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ME] [Portland] 
+  1.7. [ME] [Portland] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Gustospizzacone&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/Gustospizzacone' target='t'>Gustospizzacone</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ME] [Portland] 
+  1.8. [ME] [Portland] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=wickedgoodtruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/wickedgoodtruck' target='t'>wickedgoodtruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ME] [Portland] 
+  1.9. [ME] [Portland] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=corazontweet&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/corazontweet' target='t'>corazontweet</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ME] [Portland] 
+  1.10. [ME] [Portland] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LoveCupcakesME&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/LoveCupcakesME' target='t'>LoveCupcakesME</A>
 </div>
 <h2>Scarborough, ME</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ME] [Scarborough] 
+  1.11. [ME] [Scarborough] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=mainelyburgers&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/mainelyburgers' target='t'>mainelyburgers</A>
 </div>
