--- a/tweeters-2013-09-15/MO.html
+++ b/tweeters-2013-09-15/MO.html
@@ -2,222 +2,222 @@
 <h1>MO</h1>
 <h2>Barnhart, MO</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Barnhart] 
+  1.1. [MO] [Barnhart] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=cheeseshack_stl&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/cheeseshack_stl' target='t'>cheeseshack_stl</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Barnhart] 
+  1.2. [MO] [Barnhart] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TheSweetDivine&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TheSweetDivine' target='t'>TheSweetDivine</A>
 </div>
 <h2>Chesterfield, MO</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Chesterfield] 
+  1.3. [MO] [Chesterfield] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Sarahscakestop&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/Sarahscakestop' target='t'>Sarahscakestop</A>
 </div>
 <h2>Kansas city, MO</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Kansas City] 
+  1.4. [MO] [Kansas City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=JazzyBs1&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/JazzyBs1' target='t'>JazzyBs1</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Kansas City] 
+  1.5. [MO] [Kansas City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=thegoodyou&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/thegoodyou' target='t'>thegoodyou</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Kansas City] 
+  1.6. [MO] [Kansas City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=DetroitConeyMO&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/DetroitConeyMO' target='t'>DetroitConeyMO</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Kansas City] 
+  1.7. [MO] [Kansas City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=wilmasgoodfood&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/wilmasgoodfood' target='t'>wilmasgoodfood</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Kansas City] 
+  1.8. [MO] [Kansas City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=MyDoggHouse&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/MyDoggHouse' target='t'>MyDoggHouse</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Kansas City] 
+  1.9. [MO] [Kansas City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=monksroastbeef&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/monksroastbeef' target='t'>monksroastbeef</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Kansas City] 
+  1.10. [MO] [Kansas City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=GarysOntheGo&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/GarysOntheGo' target='t'>GarysOntheGo</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Kansas City] 
+  1.11. [MO] [Kansas City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=3girlscupcakes&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/3girlscupcakes' target='t'>3girlscupcakes</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Kansas City] 
+  1.12. [MO] [Kansas City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=cajuncabin&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/cajuncabin' target='t'>cajuncabin</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Kansas City] 
+  1.13. [MO] [Kansas City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=coffeecakekc&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/coffeecakekc' target='t'>coffeecakekc</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Kansas City] 
+  1.14. [MO] [Kansas City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Little_Italy_KC&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/Little_Italy_KC' target='t'>Little_Italy_KC</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Kansas City] 
+  1.15. [MO] [Kansas City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=DriftwoodKC&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/DriftwoodKC' target='t'>DriftwoodKC</A>
 </div>
 <h2>Saint joseph, MO</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Joseph] 
+  1.16. [MO] [Saint Joseph] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=stopthetruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/stopthetruck' target='t'>stopthetruck</A>
 </div>
 <h2>Saint louis, MO</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.17. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CurbsideCookery&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/CurbsideCookery' target='t'>CurbsideCookery</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.18. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=DELIonaROLL&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/DELIonaROLL' target='t'>DELIonaROLL</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.19. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SpeedwayEatery&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/SpeedwayEatery' target='t'>SpeedwayEatery</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.20. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=whereschacha&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/whereschacha' target='t'>whereschacha</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.21. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=PiTruckSTL&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/PiTruckSTL' target='t'>PiTruckSTL</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.22. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LeFoodTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/LeFoodTruck' target='t'>LeFoodTruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.23. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BurgerInk&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/BurgerInk' target='t'>BurgerInk</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.24. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=bombayfoodtruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/bombayfoodtruck' target='t'>bombayfoodtruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.25. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=HolyCrepeSTL&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/HolyCrepeSTL' target='t'>HolyCrepeSTL</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.26. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ChopShopStl&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ChopShopStl' target='t'>ChopShopStl</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.27. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=GreekTruckSTL&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/GreekTruckSTL' target='t'>GreekTruckSTL</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.28. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=tacotruckstl&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/tacotruckstl' target='t'>tacotruckstl</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.29. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=KonaIceStLouis&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/KonaIceStLouis' target='t'>KonaIceStLouis</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.30. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ziasonthehill&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ziasonthehill' target='t'>ziasonthehill</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.31. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=steamrollerstl&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/steamrollerstl' target='t'>steamrollerstl</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.32. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TasteDBurger&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TasteDBurger' target='t'>TasteDBurger</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.33. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=guerrillastreet&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/guerrillastreet' target='t'>guerrillastreet</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.34. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=FireandIceCream&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/FireandIceCream' target='t'>FireandIceCream</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.35. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=saucedonwheels&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/saucedonwheels' target='t'>saucedonwheels</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.36. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=GoGyroGo&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/GoGyroGo' target='t'>GoGyroGo</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.37. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=RobertosTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/RobertosTruck' target='t'>RobertosTruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.38. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=2girls4wheels&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/2girls4wheels' target='t'>2girls4wheels</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.39. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=lulusfoodtruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/lulusfoodtruck' target='t'>lulusfoodtruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.40. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=seoultaco&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/seoultaco' target='t'>seoultaco</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.41. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ShellsCoastal&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ShellsCoastal' target='t'>ShellsCoastal</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [Saint Louis] 
+  1.42. [MO] [Saint Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=hotaztec&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/hotaztec' target='t'>hotaztec</A>
 </div>
 <h2>St. louis, MO</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [MO] [St. Louis] 
+  1.43. [MO] [St. Louis] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=johnyolos&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/johnyolos' target='t'>johnyolos</A>
 </div>
