--- a/tweeters-2013-09-15/ND.html
+++ b/tweeters-2013-09-15/ND.html
@@ -2,35 +2,35 @@
 <h1>ND</h1>
 <h2>Bismarck, ND</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ND] [Bismarck] 
+  1.1. [ND] [Bismarck] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=fireflourpizza&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/fireflourpizza' target='t'>fireflourpizza</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ND] [Bismarck] 
+  1.2. [ND] [Bismarck] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=KrollsDiner&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/KrollsDiner' target='t'>KrollsDiner</A>
 </div>
 <h2>Fargo, ND</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ND] [Fargo] 
+  1.3. [ND] [Fargo] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=romostacos&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/romostacos' target='t'>romostacos</A>
 </div>
 <h2>Minot, ND</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ND] [Minot] 
+  1.4. [ND] [Minot] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=JaxHardy1&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/JaxHardy1' target='t'>JaxHardy1</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ND] [Minot] 
+  1.5. [ND] [Minot] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=MuncheezeTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/MuncheezeTruck' target='t'>MuncheezeTruck</A>
 </div>
 <h2>Williston, ND</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [ND] [Williston] 
+  1.6. [ND] [Williston] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=thesloppyjalopy&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/thesloppyjalopy' target='t'>thesloppyjalopy</A>
 </div>
