--- a/tweeters-2013-09-15/NJ.html
+++ b/tweeters-2013-09-15/NJ.html
@@ -2,168 +2,168 @@
 <h1>NJ</h1>
 <h2>Atlantic city, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Atlantic City] 
+  1.1. [NJ] [Atlantic City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=MUSTACHEMOBILE&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/MUSTACHEMOBILE' target='t'>MUSTACHEMOBILE</A>
 </div>
 <h2>Brick township, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Brick Township] 
+  1.2. [NJ] [Brick Township] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=forkintheroadnj&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/forkintheroadnj' target='t'>forkintheroadnj</A>
 </div>
 <h2>Cherry hill, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Cherry Hill] 
+  1.3. [NJ] [Cherry Hill] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=russiandressing&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/russiandressing' target='t'>russiandressing</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Cherry Hill] 
+  1.4. [NJ] [Cherry Hill] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=cupcakes2gogo&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/cupcakes2gogo' target='t'>cupcakes2gogo</A>
 </div>
 <h2>Clark, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Clark] 
+  1.5. [NJ] [Clark] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Marcis_doghouse&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/Marcis_doghouse' target='t'>Marcis_doghouse</A>
 </div>
 <h2>Edison, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Edison] 
+  1.6. [NJ] [Edison] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LombardiPizzaCo&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/LombardiPizzaCo' target='t'>LombardiPizzaCo</A>
 </div>
 <h2>Elizabeth, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Elizabeth] 
+  1.7. [NJ] [Elizabeth] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=lechondenegron&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/lechondenegron' target='t'>lechondenegron</A>
 </div>
 <h2>Englishtown, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Englishtown] 
+  1.8. [NJ] [Englishtown] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=NJWrapStar&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/NJWrapStar' target='t'>NJWrapStar</A>
 </div>
 <h2>Farmingdale, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Farmingdale] 
+  1.9. [NJ] [Farmingdale] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=BaconOnWheels&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/BaconOnWheels' target='t'>BaconOnWheels</A>
 </div>
 <h2>Green brock, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Green Brock] 
+  1.10. [NJ] [Green Brock] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CupcakeStop&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/CupcakeStop' target='t'>CupcakeStop</A>
 </div>
 <h2>Hamilton square, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Hamilton Square] 
+  1.11. [NJ] [Hamilton Square] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=KonaIceNJ&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/KonaIceNJ' target='t'>KonaIceNJ</A>
 </div>
 <h2>Hoboken, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Hoboken] 
+  1.12. [NJ] [Hoboken] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TheTacoTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TheTacoTruck' target='t'>TheTacoTruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Hoboken] 
+  1.13. [NJ] [Hoboken] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=mollysmilktruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/mollysmilktruck' target='t'>mollysmilktruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Hoboken] 
+  1.14. [NJ] [Hoboken] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Aroy_d&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/Aroy_d' target='t'>Aroy_d</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Hoboken] 
+  1.15. [NJ] [Hoboken] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=burgerboxtruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/burgerboxtruck' target='t'>burgerboxtruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Hoboken] 
+  1.16. [NJ] [Hoboken] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=AmandaBananasNJ&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/AmandaBananasNJ' target='t'>AmandaBananasNJ</A>
 </div>
 <h2>Hopewell, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Hopewell] 
+  1.17. [NJ] [Hopewell] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=NOMADPIZZA&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/NOMADPIZZA' target='t'>NOMADPIZZA</A>
 </div>
 <h2>Jamesburg, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Jamesburg] 
+  1.18. [NJ] [Jamesburg] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ahhlacart&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ahhlacart' target='t'>ahhlacart</A>
 </div>
 <h2>Jersey city, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Jersey City] 
+  1.19. [NJ] [Jersey City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Burgerissimo&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/Burgerissimo' target='t'>Burgerissimo</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Jersey City] 
+  1.20. [NJ] [Jersey City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LaSonrisaFoods&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/LaSonrisaFoods' target='t'>LaSonrisaFoods</A>
 </div>
 <h2>Montclair, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Montclair] 
+  1.21. [NJ] [Montclair] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=hungerconstruct&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/hungerconstruct' target='t'>hungerconstruct</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Montclair] 
+  1.22. [NJ] [Montclair] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TFQfoodtruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TFQfoodtruck' target='t'>TFQfoodtruck</A>
 </div>
 <h2>New brunswick, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [New Brunswick] 
+  1.23. [NJ] [New Brunswick] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=VeganLunchTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/VeganLunchTruck' target='t'>VeganLunchTruck</A>
 </div>
 <h2>Newark, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Newark] 
+  1.24. [NJ] [Newark] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=taqueriAutentic&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/taqueriAutentic' target='t'>taqueriAutentic</A>
 </div>
 <h2>Old bridge, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Old Bridge] 
+  1.25. [NJ] [Old Bridge] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TheEmpExpress&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TheEmpExpress' target='t'>TheEmpExpress</A>
 </div>
 <h2>Secaucas, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Secaucas] 
+  1.26. [NJ] [Secaucas] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=mausamnyc&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/mausamnyc' target='t'>mausamnyc</A>
 </div>
 <h2>Somerset, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Somerset] 
+  1.27. [NJ] [Somerset] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=oinkandmoobbq&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/oinkandmoobbq' target='t'>oinkandmoobbq</A>
 </div>
 <h2>Summit, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Summit] 
+  1.28. [NJ] [Summit] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=PVPIZZATRUCK&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/PVPIZZATRUCK' target='t'>PVPIZZATRUCK</A>
 </div>
 <h2>Woodbridge, NJ</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NJ] [Woodbridge] 
+  1.29. [NJ] [Woodbridge] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=empanadaguy1&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/empanadaguy1' target='t'>empanadaguy1</A>
 </div>
