--- a/tweeters-2013-09-15/NM.html
+++ b/tweeters-2013-09-15/NM.html
@@ -2,33 +2,33 @@
 <h1>NM</h1>
 <h2>Albuquerque, NM</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NM] [Albuquerque] 
+  1.1. [NM] [Albuquerque] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=gauchitocater&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/gauchitocater' target='t'>gauchitocater</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NM] [Albuquerque] 
+  1.2. [NM] [Albuquerque] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=OzPatisserie&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/OzPatisserie' target='t'>OzPatisserie</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NM] [Albuquerque] 
+  1.3. [NM] [Albuquerque] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TheSupperTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TheSupperTruck' target='t'>TheSupperTruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NM] [Albuquerque] 
+  1.4. [NM] [Albuquerque] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=TheBoilerMonkey&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/TheBoilerMonkey' target='t'>TheBoilerMonkey</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NM] [Albuquerque] 
+  1.5. [NM] [Albuquerque] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=DiaDeLosTaKos&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/DiaDeLosTaKos' target='t'>DiaDeLosTaKos</A>
 </div>
 <h2>Alburquerque, NM</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [NM] [Alburquerque] 
+  1.6. [NM] [Alburquerque] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SeasonalPalate&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/SeasonalPalate' target='t'>SeasonalPalate</A>
 </div>
