--- a/tweeters-2013-09-15/OK.html
+++ b/tweeters-2013-09-15/OK.html
@@ -2,128 +2,128 @@
 <h1>OK</h1>
 <h2>Broken arrow, OK</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Broken Arrow] 
+  1.1. [OK] [Broken Arrow] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=tntdynodogs&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/tntdynodogs' target='t'>tntdynodogs</A>
 </div>
 <h2>Del city, OK</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Del City] 
+  1.2. [OK] [Del City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SMOKEYRAYS&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/SMOKEYRAYS' target='t'>SMOKEYRAYS</A>
 </div>
 <h2>Edmond, OK</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Edmond] 
+  1.3. [OK] [Edmond] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=SmokinOkies&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/SmokinOkies' target='t'>SmokinOkies</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Edmond] 
+  1.4. [OK] [Edmond] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=cupcakestogogo&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/cupcakestogogo' target='t'>cupcakestogogo</A>
 </div>
 <h2>Oklahoma city, OK</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Oklahoma City] 
+  1.5. [OK] [Oklahoma City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=EGGROLLicious&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/EGGROLLicious' target='t'>EGGROLLicious</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Oklahoma City] 
+  1.6. [OK] [Oklahoma City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=FranksWurst&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/FranksWurst' target='t'>FranksWurst</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Oklahoma City] 
+  1.7. [OK] [Oklahoma City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Wok_Stop_OKC&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/Wok_Stop_OKC' target='t'>Wok_Stop_OKC</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Oklahoma City] 
+  1.8. [OK] [Oklahoma City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=lonewolfbanhmi&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/lonewolfbanhmi' target='t'>lonewolfbanhmi</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Oklahoma City] 
+  1.9. [OK] [Oklahoma City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=reddirtdogs&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/reddirtdogs' target='t'>reddirtdogs</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Oklahoma City] 
+  1.10. [OK] [Oklahoma City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=bigtrucktacos&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/bigtrucktacos' target='t'>bigtrucktacos</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Oklahoma City] 
+  1.11. [OK] [Oklahoma City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=CrepeBrewers&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/CrepeBrewers' target='t'>CrepeBrewers</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Oklahoma City] 
+  1.12. [OK] [Oklahoma City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=IceCreamOKC&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/IceCreamOKC' target='t'>IceCreamOKC</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Oklahoma City] 
+  1.13. [OK] [Oklahoma City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=wafflechampion&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/wafflechampion' target='t'>wafflechampion</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Oklahoma City] 
+  1.14. [OK] [Oklahoma City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=HeosKitchen&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/HeosKitchen' target='t'>HeosKitchen</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Oklahoma City] 
+  1.15. [OK] [Oklahoma City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=momentum_dining&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/momentum_dining' target='t'>momentum_dining</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Oklahoma City] 
+  1.16. [OK] [Oklahoma City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=PuertoRIco2Go&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/PuertoRIco2Go' target='t'>PuertoRIco2Go</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Oklahoma City] 
+  1.17. [OK] [Oklahoma City] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Moto_Chef_&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/Moto_Chef_' target='t'>Moto_Chef_</A>
 </div>
 <h2>Stillwater, OK</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Stillwater] 
+  1.18. [OK] [Stillwater] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=purdyqbbq&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/purdyqbbq' target='t'>purdyqbbq</A>
 </div>
 <h2>Tulsa, OK</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Tulsa] 
+  1.19. [OK] [Tulsa] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=EatMikesBBQ&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/EatMikesBBQ' target='t'>EatMikesBBQ</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Tulsa] 
+  1.20. [OK] [Tulsa] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=LegrubsCatering&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/LegrubsCatering' target='t'>LegrubsCatering</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Tulsa] 
+  1.21. [OK] [Tulsa] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=MangiamoTruck&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/MangiamoTruck' target='t'>MangiamoTruck</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Tulsa] 
+  1.22. [OK] [Tulsa] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ElGringoLocoLLC&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ElGringoLocoLLC' target='t'>ElGringoLocoLLC</A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Tulsa] 
+  1.23. [OK] [Tulsa] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=doghousetulsa&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/doghousetulsa' target='t'>doghousetulsa</A>
 </div>
 <h2>Yukon, OK</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [OK] [Yukon] 
+  1.24. [OK] [Yukon] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=WildAls&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/WildAls' target='t'>WildAls</A>
 </div>
