--- a/tweeters-2013-09-15/PR.html
+++ b/tweeters-2013-09-15/PR.html
@@ -2,25 +2,25 @@
 <h1>PR</h1>
 <h2>Bayamón, PR</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [PR] [Bayamón] 
+  1.1. [PR] [Bayamón] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=elnaqui&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/elnaqui' target='t'>elnaqui</A>
 </div>
 <h2>Mayaguez, PR</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [PR] [Mayaguez] 
-  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=GaribaldysTacos &show_count=true&show_screen_name=true'></iframe>
+  1.2. [PR] [Mayaguez] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=GaribaldysTacos&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/GaribaldysTacos ' target='t'>GaribaldysTacos </A>
 </div>
 <h2>San juan, PR</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [PR] [San Juan] 
-  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name= ElChurryPR &show_count=true&show_screen_name=true'></iframe>
+  1.3. [PR] [San Juan] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=ElChurryPR&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/ ElChurryPR ' target='t'> ElChurryPR </A>
 </div>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [PR] [San Juan] 
-  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Los_Monkeys &show_count=true&show_screen_name=true'></iframe>
+  1.4. [PR] [San Juan] 
+  <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=Los_Monkeys&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/Los_Monkeys ' target='t'>Los_Monkeys </A>
 </div>
 </body></html>
