--- a/tweeters-2013-09-15/WY.html
+++ b/tweeters-2013-09-15/WY.html
@@ -2,7 +2,7 @@
 <h1>WY</h1>
 <h2>Gillette, WY</h2>
 <div style='height:24px;line-height:24px; font-size: 16px'>
-  [WY] [Gillette] 
+  1.1. [WY] [Gillette] 
   <iframe style='min-width:300px; height:20px;' allowtransparency='true' frameborder='0' scrolling='no' src='http://platform.twitter.com/widgets/follow_button.html?screen_name=PizzaCarrello&show_count=true&show_screen_name=true'></iframe>
   - <A href='http://www.twitter.com/PizzaCarrello' target='t'>PizzaCarrello</A>
 </div>
